Revert "testing to fix overlap problem"
This reverts commit 62281791d0c67f643af1a73866c32b43072786f5.

--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@ html,body{height:100%;}
   transform: translateY(10vh);
 
 }
-.div{
-  min-height: 100px;
-  overflow: hidden;
-}
 
 
 /* CUSTOMIZE THE CAROUSEL
